heatmaps for vacation py completed

--- a/Vacation_Py/VacationPy_main.ipynb
+++ b/Vacation_Py/VacationPy_main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +27,7 @@
     "import gmaps\n",
     "import os\n",
     "import time\n",
+    "import pprint\n",
     "\n",
     "# Import API key\n",
     "from api_keys import g_key"
@@ -216,7 +217,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33159bc67870498aba372e8b7b343d69",
+       "model_id": "9b346033f0794c60b07971094583f943",
        "version_major": 2,
        "version_minor": 0
       },
@@ -734,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +963,7 @@
        "12      IN  1604162142  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1231,7 @@
        "12      IN  1604162142             "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1257,7 +1258,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check example of response from API\n",
+    "# params[\"location\"] = f\"{24.69},{46.72}\"\n",
+    "# response = requests.get(url, params=params).json()\n",
+    "# results = response['results']\n",
+    "# results[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1265,44 +1286,21 @@
      "output_type": "stream",
      "text": [
       "Retrieving Results for Index 0: Riyadh.\n",
-      "Closest hotel in Riyadh is Four Seasons Hotel Riyadh At Kingdom Center.\n",
-      "-----------------------------------------------------------------\n",
       "Retrieving Results for Index 1: Mar del Plata.\n",
-      "Closest hotel in Mar del Plata is NH Gran Hotel Provincial.\n",
-      "-----------------------------------------------------------------\n",
       "Retrieving Results for Index 2: Constantine.\n",
-      "Closest hotel in Constantine is Constantine Marriott Hotel.\n",
-      "-----------------------------------------------------------------\n",
       "Retrieving Results for Index 3: Birmitrapur.\n",
-      "encountered error... skipping.\n",
-      "-----------------------------------------------------------------\n",
+      "Missing field/result... skipping.\n",
       "Retrieving Results for Index 4: Tamiahua.\n",
-      "Closest hotel in Tamiahua is Hotel Posada Casanova.\n",
-      "-----------------------------------------------------------------\n",
       "Retrieving Results for Index 5: Noumea.\n",
-      "Closest hotel in Noumea is Nouvata.\n",
-      "-----------------------------------------------------------------\n",
       "Retrieving Results for Index 6: Gwanda.\n",
-      "Closest hotel in Gwanda is Skmo Lodge.\n",
-      "-----------------------------------------------------------------\n",
       "Retrieving Results for Index 7: Carahue.\n",
-      "Closest hotel in Carahue is Hostal de carahue.\n",
-      "-----------------------------------------------------------------\n",
       "Retrieving Results for Index 8: Asifābād.\n",
-      "Closest hotel in Asifābād is Athidi.\n",
-      "-----------------------------------------------------------------\n",
       "Retrieving Results for Index 9: Agadez.\n",
-      "encountered error... skipping.\n",
-      "-----------------------------------------------------------------\n",
+      "Missing field/result... skipping.\n",
       "Retrieving Results for Index 10: Villaviciosa.\n",
-      "Closest hotel in Villaviciosa is Hotel 3 Alpacas.\n",
-      "-----------------------------------------------------------------\n",
       "Retrieving Results for Index 11: Sur.\n",
-      "Closest hotel in Sur is Sur Plaza Hotel.\n",
-      "-----------------------------------------------------------------\n",
       "Retrieving Results for Index 12: Burla.\n",
-      "encountered error... skipping.\n",
-      "-----------------------------------------------------------------\n"
+      "Missing field/result... skipping.\n"
      ]
     }
    ],
@@ -1320,18 +1318,269 @@
     "    results = response['results']    \n",
     "    \n",
     "    try:\n",
-    "        print(f\"Closest hotel in {city_name} is {results[0]['name']}.\")\n",
     "        hotel_df.loc[index, \"Hotel Name\"] = results[0]['name']    \n",
     "    except (KeyError, IndexError):\n",
-    "        print(\"encountered error... skipping.\")\n",
-    "        \n",
-    "    print(\"-----------------------------------------------------------------\")        \n",
-    "    time.sleep(1)\n"
+    "        print(\"Missing field/result... skipping.\")\n",
+    "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Riyadh</td>\n",
+       "      <td>24.69</td>\n",
+       "      <td>46.72</td>\n",
+       "      <td>77.00</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.36</td>\n",
+       "      <td>SA</td>\n",
+       "      <td>1604162075</td>\n",
+       "      <td>Vittori Palace Hotel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Mar del Plata</td>\n",
+       "      <td>-38.00</td>\n",
+       "      <td>-57.56</td>\n",
+       "      <td>71.60</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.05</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>1604162086</td>\n",
+       "      <td>Hotel NH Hotel Casino</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Constantine</td>\n",
+       "      <td>36.37</td>\n",
+       "      <td>6.61</td>\n",
+       "      <td>71.60</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.05</td>\n",
+       "      <td>DZ</td>\n",
+       "      <td>1604161978</td>\n",
+       "      <td>Constantine Marriott Hotel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Birmitrapur</td>\n",
+       "      <td>22.40</td>\n",
+       "      <td>84.77</td>\n",
+       "      <td>71.82</td>\n",
+       "      <td>65</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.88</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>1604162105</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Tamiahua</td>\n",
+       "      <td>21.27</td>\n",
+       "      <td>-97.45</td>\n",
+       "      <td>73.42</td>\n",
+       "      <td>61</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.72</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>1604162108</td>\n",
+       "      <td>Hotel Posada Casanova</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Noumea</td>\n",
+       "      <td>-22.28</td>\n",
+       "      <td>166.46</td>\n",
+       "      <td>77.00</td>\n",
+       "      <td>53</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.82</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>1604162116</td>\n",
+       "      <td>Nouvata</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Gwanda</td>\n",
+       "      <td>-20.93</td>\n",
+       "      <td>29.00</td>\n",
+       "      <td>76.42</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.57</td>\n",
+       "      <td>ZW</td>\n",
+       "      <td>1604162121</td>\n",
+       "      <td>Skmo Lodge</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Carahue</td>\n",
+       "      <td>-38.70</td>\n",
+       "      <td>-73.17</td>\n",
+       "      <td>71.60</td>\n",
+       "      <td>64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.36</td>\n",
+       "      <td>CL</td>\n",
+       "      <td>1604162126</td>\n",
+       "      <td>Hostal de carahue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Asifābād</td>\n",
+       "      <td>19.37</td>\n",
+       "      <td>79.28</td>\n",
+       "      <td>70.97</td>\n",
+       "      <td>55</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.25</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>1604162138</td>\n",
+       "      <td>Athidi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Agadez</td>\n",
+       "      <td>19.75</td>\n",
+       "      <td>10.25</td>\n",
+       "      <td>76.14</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.68</td>\n",
+       "      <td>NE</td>\n",
+       "      <td>1604162139</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Villaviciosa</td>\n",
+       "      <td>43.48</td>\n",
+       "      <td>-5.44</td>\n",
+       "      <td>75.20</td>\n",
+       "      <td>53</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.17</td>\n",
+       "      <td>ES</td>\n",
+       "      <td>1604162141</td>\n",
+       "      <td>Hotel 3 Alpacas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Sur</td>\n",
+       "      <td>22.57</td>\n",
+       "      <td>59.53</td>\n",
+       "      <td>72.52</td>\n",
+       "      <td>56</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.93</td>\n",
+       "      <td>OM</td>\n",
+       "      <td>1604162141</td>\n",
+       "      <td>Sur Plaza Hotel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Burla</td>\n",
+       "      <td>21.50</td>\n",
+       "      <td>83.87</td>\n",
+       "      <td>73.36</td>\n",
+       "      <td>63</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.32</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>1604162142</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             City    Lat     Lng  Max Temp  Humidity  Cloudiness  Wind Speed  \\\n",
+       "0          Riyadh  24.69   46.72     77.00        31           0        3.36   \n",
+       "1   Mar del Plata -38.00  -57.56     71.60        37           0        8.05   \n",
+       "2     Constantine  36.37    6.61     71.60        35           0        8.05   \n",
+       "3     Birmitrapur  22.40   84.77     71.82        65           0        5.88   \n",
+       "4        Tamiahua  21.27  -97.45     73.42        61           0        8.72   \n",
+       "5          Noumea -22.28  166.46     77.00        53           0        5.82   \n",
+       "6          Gwanda -20.93   29.00     76.42        30           0        9.57   \n",
+       "7         Carahue -38.70  -73.17     71.60        64           0        3.36   \n",
+       "8        Asifābād  19.37   79.28     70.97        55           0        4.25   \n",
+       "9          Agadez  19.75   10.25     76.14        19           0        8.68   \n",
+       "10   Villaviciosa  43.48   -5.44     75.20        53           0        9.17   \n",
+       "11            Sur  22.57   59.53     72.52        56           0        2.93   \n",
+       "12          Burla  21.50   83.87     73.36        63           0        1.32   \n",
+       "\n",
+       "   Country        Date                  Hotel Name  \n",
+       "0       SA  1604162075        Vittori Palace Hotel  \n",
+       "1       AR  1604162086       Hotel NH Hotel Casino  \n",
+       "2       DZ  1604161978  Constantine Marriott Hotel  \n",
+       "3       IN  1604162105                              \n",
+       "4       MX  1604162108       Hotel Posada Casanova  \n",
+       "5       NC  1604162116                     Nouvata  \n",
+       "6       ZW  1604162121                  Skmo Lodge  \n",
+       "7       CL  1604162126           Hostal de carahue  \n",
+       "8       IN  1604162138                      Athidi  \n",
+       "9       NE  1604162139                              \n",
+       "10      ES  1604162141             Hotel 3 Alpacas  \n",
+       "11      OM  1604162141             Sur Plaza Hotel  \n",
+       "12      IN  1604162142                              "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# hotel_df.dropna(how='any', inplace=True)\n",
+    "hotel_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1360,21 +1609,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9b346033f0794c60b07971094583f943",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Add marker layer ontop of heat map\n",
+    "markers = gmaps.marker_layer(locations, info_box_content = hotel_info)\n",
+    "fig.add_layer(markers)\n",
     "\n",
-    "\n",
-    "# Display figure\n"
+    "# Display figure\n",
+    "fig"
    ]
   },
   {
