--- a/Vacation_Py/VacationPy_main.ipynb
+++ b/Vacation_Py/VacationPy_main.ipynb
@@ -4,16 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# VacationPy\n",
-    "----\n",
-    "\n",
-    "#### Note\n",
-    "* Instructions have been included for each segment. You do not have to follow them exactly, but they are included to help you think through the steps."
+    "# VacationPy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +154,7 @@
        "4      RU  1604162071  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,13 +186,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5abda02a712d470ba3ee9b56a0be2cd5",
+       "model_id": "a84d68693ce5410bbfa0ab7b0e42ef00",
        "version_major": 2,
        "version_minor": 0
       },
@@ -234,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +433,7 @@
        "[561 rows x 9 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +673,7 @@
        "549      IN  1604162142  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +948,7 @@
        "12      IN  1604162142  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1216,7 @@
        "12      IN  1604162142             "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1263,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1270,7 @@
       "Closest hotel to Riyadh is Four Seasons Hotel Riyadh At Kingdom Center.\n",
       "------------\n",
       "Retrieving Results for Index 1: Mar del Plata.\n",
-      "Closest hotel to Mar del Plata is NH Gran Hotel Provincial.\n",
+      "Closest hotel to Mar del Plata is Hotel Las Rocas.\n",
       "------------\n",
       "Retrieving Results for Index 2: Constantine.\n",
       "Closest hotel to Constantine is Constantine Marriott Hotel.\n",
@@ -1283,10 +1279,10 @@
       "Missing field/result... skipping.\n",
       "------------\n",
       "Retrieving Results for Index 4: Tamiahua.\n",
-      "Closest hotel to Tamiahua is Hotel Posada Casanova.\n",
+      "Closest hotel to Tamiahua is Habitaciónes Casa Blanca.\n",
       "------------\n",
       "Retrieving Results for Index 5: Noumea.\n",
-      "Closest hotel to Noumea is Nouvata.\n",
+      "Closest hotel to Noumea is GONDWANA HOTEL.\n",
       "------------\n",
       "Retrieving Results for Index 6: Gwanda.\n",
       "Closest hotel to Gwanda is Skmo Lodge.\n",
@@ -1295,19 +1291,19 @@
       "Closest hotel to Carahue is Hostal de carahue.\n",
       "------------\n",
       "Retrieving Results for Index 8: Asifābād.\n",
-      "Closest hotel to Asifābād is Athidi.\n",
+      "Closest hotel to Asifābād is GAYATRI LODGE.\n",
       "------------\n",
       "Retrieving Results for Index 9: Agadez.\n",
       "Missing field/result... skipping.\n",
       "------------\n",
       "Retrieving Results for Index 10: Villaviciosa.\n",
-      "Closest hotel to Villaviciosa is Hotel 3 Alpacas.\n",
+      "Closest hotel to Villaviciosa is La corte de Lugás.\n",
       "------------\n",
       "Retrieving Results for Index 11: Sur.\n",
       "Closest hotel to Sur is Sur Plaza Hotel.\n",
       "------------\n",
       "Retrieving Results for Index 12: Burla.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel to Burla is VSSUT Guest House.\n",
       "------------\n"
      ]
     }
@@ -1340,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1401,7 +1397,7 @@
        "      <td>8.05</td>\n",
        "      <td>AR</td>\n",
        "      <td>1604162086</td>\n",
-       "      <td>NH Gran Hotel Provincial</td>\n",
+       "      <td>Hotel Las Rocas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1440,7 +1436,7 @@
        "      <td>8.72</td>\n",
        "      <td>MX</td>\n",
        "      <td>1604162108</td>\n",
-       "      <td>Hotel Posada Casanova</td>\n",
+       "      <td>Habitaciónes Casa Blanca</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1453,7 +1449,7 @@
        "      <td>5.82</td>\n",
        "      <td>NC</td>\n",
        "      <td>1604162116</td>\n",
-       "      <td>Nouvata</td>\n",
+       "      <td>GONDWANA HOTEL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1492,7 +1488,7 @@
        "      <td>4.25</td>\n",
        "      <td>IN</td>\n",
        "      <td>1604162138</td>\n",
-       "      <td>Athidi</td>\n",
+       "      <td>GAYATRI LODGE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -1518,7 +1514,7 @@
        "      <td>9.17</td>\n",
        "      <td>ES</td>\n",
        "      <td>1604162141</td>\n",
-       "      <td>Hotel 3 Alpacas</td>\n",
+       "      <td>La corte de Lugás</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -1544,7 +1540,7 @@
        "      <td>1.32</td>\n",
        "      <td>IN</td>\n",
        "      <td>1604162142</td>\n",
-       "      <td></td>\n",
+       "      <td>VSSUT Guest House</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1568,21 +1564,21 @@
        "\n",
        "   Country        Date                                   Hotel Name  \n",
        "0       SA  1604162075  Four Seasons Hotel Riyadh At Kingdom Center  \n",
-       "1       AR  1604162086                     NH Gran Hotel Provincial  \n",
+       "1       AR  1604162086                              Hotel Las Rocas  \n",
        "2       DZ  1604161978                   Constantine Marriott Hotel  \n",
        "3       IN  1604162105                                               \n",
-       "4       MX  1604162108                        Hotel Posada Casanova  \n",
-       "5       NC  1604162116                                      Nouvata  \n",
+       "4       MX  1604162108                     Habitaciónes Casa Blanca  \n",
+       "5       NC  1604162116                               GONDWANA HOTEL  \n",
        "6       ZW  1604162121                                   Skmo Lodge  \n",
        "7       CL  1604162126                            Hostal de carahue  \n",
-       "8       IN  1604162138                                       Athidi  \n",
+       "8       IN  1604162138                                GAYATRI LODGE  \n",
        "9       NE  1604162139                                               \n",
-       "10      ES  1604162141                              Hotel 3 Alpacas  \n",
+       "10      ES  1604162141                            La corte de Lugás  \n",
        "11      OM  1604162141                              Sur Plaza Hotel  \n",
-       "12      IN  1604162142                                               "
+       "12      IN  1604162142                            VSSUT Guest House  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1594,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1657,36 +1653,21 @@
        "      <td>1604162139</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Burla</td>\n",
-       "      <td>21.50</td>\n",
-       "      <td>83.87</td>\n",
-       "      <td>73.36</td>\n",
-       "      <td>63</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.32</td>\n",
-       "      <td>IN</td>\n",
-       "      <td>1604162142</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           City    Lat    Lng  Max Temp  Humidity  Cloudiness  Wind Speed  \\\n",
-       "3   Birmitrapur  22.40  84.77     71.82        65           0        5.88   \n",
-       "9        Agadez  19.75  10.25     76.14        19           0        8.68   \n",
-       "12        Burla  21.50  83.87     73.36        63           0        1.32   \n",
+       "          City    Lat    Lng  Max Temp  Humidity  Cloudiness  Wind Speed  \\\n",
+       "3  Birmitrapur  22.40  84.77     71.82        65           0        5.88   \n",
+       "9       Agadez  19.75  10.25     76.14        19           0        8.68   \n",
        "\n",
-       "   Country        Date Hotel Name  \n",
-       "3       IN  1604162105             \n",
-       "9       NE  1604162139             \n",
-       "12      IN  1604162142             "
+       "  Country        Date Hotel Name  \n",
+       "3      IN  1604162105             \n",
+       "9      NE  1604162139             "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1699,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1760,7 +1741,7 @@
        "      <td>8.05</td>\n",
        "      <td>AR</td>\n",
        "      <td>1604162086</td>\n",
-       "      <td>NH Gran Hotel Provincial</td>\n",
+       "      <td>Hotel Las Rocas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1786,7 +1767,7 @@
        "      <td>8.72</td>\n",
        "      <td>MX</td>\n",
        "      <td>1604162108</td>\n",
-       "      <td>Hotel Posada Casanova</td>\n",
+       "      <td>Habitaciónes Casa Blanca</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1799,7 +1780,7 @@
        "      <td>5.82</td>\n",
        "      <td>NC</td>\n",
        "      <td>1604162116</td>\n",
-       "      <td>Nouvata</td>\n",
+       "      <td>GONDWANA HOTEL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1838,7 +1819,7 @@
        "      <td>4.25</td>\n",
        "      <td>IN</td>\n",
        "      <td>1604162138</td>\n",
-       "      <td>Athidi</td>\n",
+       "      <td>GAYATRI LODGE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -1851,7 +1832,7 @@
        "      <td>9.17</td>\n",
        "      <td>ES</td>\n",
        "      <td>1604162141</td>\n",
-       "      <td>Hotel 3 Alpacas</td>\n",
+       "      <td>La corte de Lugás</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -1885,18 +1866,18 @@
        "\n",
        "  Country        Date                                   Hotel Name  \n",
        "0      SA  1604162075  Four Seasons Hotel Riyadh At Kingdom Center  \n",
-       "1      AR  1604162086                     NH Gran Hotel Provincial  \n",
+       "1      AR  1604162086                              Hotel Las Rocas  \n",
        "2      DZ  1604161978                   Constantine Marriott Hotel  \n",
-       "3      MX  1604162108                        Hotel Posada Casanova  \n",
-       "4      NC  1604162116                                      Nouvata  \n",
+       "3      MX  1604162108                     Habitaciónes Casa Blanca  \n",
+       "4      NC  1604162116                               GONDWANA HOTEL  \n",
        "5      ZW  1604162121                                   Skmo Lodge  \n",
        "6      CL  1604162126                            Hostal de carahue  \n",
-       "7      IN  1604162138                                       Athidi  \n",
-       "8      ES  1604162141                              Hotel 3 Alpacas  \n",
+       "7      IN  1604162138                                GAYATRI LODGE  \n",
+       "8      ES  1604162141                            La corte de Lugás  \n",
        "9      OM  1604162141                              Sur Plaza Hotel  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1910,7 +1891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1932,13 +1913,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5abda02a712d470ba3ee9b56a0be2cd5",
+       "model_id": "a84d68693ce5410bbfa0ab7b0e42ef00",
        "version_major": 2,
        "version_minor": 0
       },
